# langfuse-python

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  TYPE_CHECKING.md  ci.ruff.toml  code_review.md  pyproject.toml  ruff.toml  tox.ini  transformer_config.yml
.agents/: AGENTS.md  README.md  config.json
.agents/scripts/: install.sh  postinstall.sh  sync-agent-shims.py
.agents/skills/: README.md
.claude/: settings.json
.codex/environments/: environment.toml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot-auto-merge.yml  dependabot-autp-merge.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: availability-partner-packages.yml  ci.yml  claude-review-maintainer-prs.yml  codeql.yml  dependabot-merge.yml  dependabot-rebase-stale.yml  package-availability-check.yml  release.yml  server.yml  validate-pr-title.yml  zizmor.yml
cookbook/: Online evaluating of RAG pipelines with Ragas.ipynb  langfuse+ragas.ipynb
examples/django_example/: README.md  db.sqlite3  manage.py  pyproject.toml
examples/django_example/django_example/: asgi.py  settings.py  urls.py  wsgi.py
examples/django_example/myapp/: __init__.py  apps.py  langfuse_integration.py  views.py
examples/fastapi_example/: README.md  pyproject.toml
examples/fastapi_example/fastapi_example/: main.py
examples/vllm_openai_example/: README.md  pyproject.toml
examples/vllm_openai_example/vllm_openai_example/: api_server.py  cli_args.py  langfuse_utils.py  protocol.py  serving_chat.py  serving_completion.py  serving_engine.py
integration/: README.md  pyproject.toml
integration/integration/: main.py
langfuse/: Sampler.py  __init__.py  _version.py  batch_evaluation.py  callback.py  ci.py  client.py  concurrency.py  environment.py  experiment.py  extract_model.py  futures.py  input_validation.py  integrations.py  langfuse_media.py  log.py  logger.py  logging.py  main.py  media.py  model.py  openai.py  parse_error.py  prompt_cache.py  request.py  serializer.py  span_filter.py  task_manager.py  types.py  utils.py  version.py  wrapper.py
langfuse/_client/: attribute_propagation.py  attributes.py  client.py  constants.py  context_propagation.py  datasets.py  environment_variables.py  experiments.py  generic_types.py  get_client.py  http_retry_patch.py  masking_exporter.py  mixins.py  observation_factory.py  observe.py  propagation.py  resource_manager.py  span.py  span_exporter.py  span_filter.py  span_processor.py  tracer.py  utils.py
langfuse/_task_manager/: ingestion_consumer.py  media_manager.py  media_upload_consumer.py  media_upload_queue.py  score_ingestion_consumer.py  task_manager.py
langfuse/_utils/: __init__.py  control_flow.py  error_logging.py  json_path.py  parse_error.py  prompt_cache.py  request.py  serializer.py  skill_cache.py
langfuse/api/: README.md  __init__.py  client.py  model.py  reference.md  version.py
langfuse/callback/: __init__.py  base.py  langchain.py  llama_index.py  llamaindex.py
langfuse/decorators/: __init__.py  error_logging.py  langfuse.py  langfuse_decorator.py
langfuse/langchain/: CallbackHandler.py  utils.py
langfuse/llama_index/: __init__.py  _event_handler.py  _instrumentor.py  _span_handler.py  llama_index.py  span_handler.py  utils.py
langfuse/models/: __init__.py  create_event_request.py  create_log_model_parameters.py  create_score_request.py  observation_level_event.py  trace_id_type.py  trace_id_type_event.py  trace_id_type_generations.py  trace_id_type_span.py
langfuse/openapi/: __init__.py
langfuse/otel/: __init__.py  _client.py  _datasets.py  _get_client.py  _logger.py  _observe.py  _span.py  _tracer.py  _utils.py  attributes.py  constants.py  dx.md  environment_variables.py  tracer.py
langfuse/temporal/: __init__.py  attributes.py  config.py  interceptor.py  plugin.py  presets.py  redaction.py
langfuse/types/: __init__.py
langfuse/utils/: __init__.py  base_callback_handler.py  compile_template_string.py  error_logging.py  langfuse_singleton.py
notebooks/: issue-1117-dedup-workaround.ipynb
scripts/: postinstall.sh  release.py  select_e2e_shard.py
scripts/agents/: sync-agent-shims.py
scripts/codex/: maintenance.sh  quick-check.sh  setup.sh
static/: state_of_the_union_short.txt
streamlit_test/: streamlit_test_app.py
tests/: api_wrapper.py  conftest.py  load_test.py  test-\something.py  test_additional_headers_simple.py  test_batch_evaluation.py  test_core_sdk.py  test_core_sdk_unit.py  test_datasets.py  test_datetime_utils.py  test_decorators.py  test_deprecation.py  test_error_logging.py  test_error_parsing.py  test_experiments.py  test_extract_model.py  test_extract_model_langchain_openai.py  test_extract_usage_details.py  test_futures_store.py  test_http_client.py  test_initialization.py  test_integrations.py  test_issue_5659.py  test_json.py  test_langchain.py  test_langchain_callback_handler.py  test_langchain_callback_unit.py  test_langchain_integration.py  test_langchain_usage.py  test_llama_index.py  test_llama_index_instrumentation.py  test_llama_index_span_handler.py  test_logger.py  test_manual_graph_instrumentation.py  test_media.py  test_media_manager.py  test_openai.py  test_openai_assistants.py  test_openai_prompt_extraction.py  test_openai_streaming_unit.py  (+24 more)
tests/e2e/: test_batch_evaluation.py  test_core_sdk.py  test_datasets.py  test_decorators.py  test_experiments.py  test_media.py  test_prompt.py
tests/live_provider/: test_langchain.py  test_langchain_integration.py  test_openai.py  test_prompt.py
tests/support/: api_wrapper.py  retry.py  utils.py
tests/unit/: test_additional_headers_simple.py  test_app_root_detection.py  test_auth_check.py  test_ci.py  test_create_score_validation.py  test_dataset_run_item_observation_id.py  test_dataset_url_encoding.py  test_datasets.py  test_e2e_sharding.py  test_e2e_support.py  test_error_logging.py  test_experiment.py  test_extract_model_name.py  (+29 more)
wrapper/: README.md  pyproject.toml
(+929 files in other folders)
