[project]
name = "langfuse"
version = "3.2.6"
description = "A client library for accessing langfuse"
authors = [{ name = "langfuse", email = "developers@langfuse.com" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.15.4,<1.0",
    "pydantic>=1.10.7, <3.0",
    "backoff>=1.10.0",
    "wrapt~=1.14",
    "packaging>=23.2,<26.0",
    "requests>=2,<3",
    "opentelemetry-api>=1.33.1,<2",
    "opentelemetry-sdk>=1.33.1,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1,<2",
]

[project.optional-dependencies]
openai = ["openai>=0.27.8"]
langchain = ["langchain>=0.0.309"]

[project.scripts]
release = "scripts.release:main"

[dependency-groups]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-timeout>=2.1.0,<3",
    "pytest-xdist>=3.3.1,<4",
    "pre-commit>=3.2.2,<4",
    "pytest-asyncio>=0.21.1,<0.24.0",
    "pytest-httpserver>=1.0.8,<2",
    "ruff>=0.1.8,<0.6.0",
    "mypy>=1.0.0,<2",
    "langchain-openai>=0.0.5,<0.3",
    "langgraph>=0.2.62,<0.3",
]
docs = ["pdoc>=14.4.0,<15"]

[tool.uv]
default-groups = [
    "dev",
    "docs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
log_cli = true

[tool.poetry_bumpversion.file."langfuse/version.py"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# Performance optimizations for CI
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "openai.*",
    "chromadb.*",
    "tiktoken.*",
    "google.*",
    "anthropic.*",
    "cohere.*",
    "dashscope.*",
    "pymongo.*",
    "bson.*",
    "boto3.*",
    "llama_index.*",
    "respx.*",
    "bs4.*",
    "lark.*",
    "huggingface_hub.*",
    "backoff.*",
    "wrapt.*",
    "packaging.*",
    "requests.*",
    "opentelemetry.*"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "langfuse.api.resources.*",
    "langfuse.api.core.*",
    "langfuse.api.client"
]
ignore_errors = true
