[tool.poetry]
name = "integration"
version = "0.1.0"
description = ""
authors = ["Max Deichmann <m.deichmann@tum.de>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "langfuse", from = ".."}]

[tool.poetry.scripts]
main = "integration.main:main"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langfuse = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
