[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
langfuse = "^2.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
