[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["ChrisTho23 <christophe.thomassin23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
langfuse = "2.13.3a0"

[tool.poetry.scripts]
start = "fastapi_example.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
